[package]
name = "kernel_bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
kernel_paging = { path = "../kernel_paging" }
kernel_allocator = { path = "../kernel_allocator" }
kernel_cpu = { path = "../kernel_cpu" }