[package]
name = "kernel_main"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
kernel_cpu = { path = "../kernel_cpu" }
kernel_trap_frame = { path = "../kernel_trap_frame" }
spin = "*"
kernel_allocator = { path = "../kernel_allocator" }
kernel_executor = { path = "../kernel_executor" }
kernel_lock = { path = "../kernel_lock" }
kernel_printer = { path = "../kernel_printer" }
kernel_api = { path = "../kernel_api" }
kernel_process = { path = "../kernel_process" }
kernel_paging = { path = "../kernel_paging" }
kernel_sbi = { path = "../kernel_sbi" }
kernel_send_generic = { path = "../kernel_send_generic" }
kernel_util = { path = "../kernel_util" }
kernel_chip_drivers = { path = "../kernel_chip_drivers" }
kernel_resource_map = { path = "../kernel_resource_map" }
kernel_syscall = { path = "../kernel_syscall" }
sbi = "*"
fdt = "*"
static-box = "*"
bitmask = { version = "0.5", default-features = false }

[features]
backtrace = []
autodebug = ["backtrace"]
default = ["autodebug"]