[package]
name = "kernel_syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_process = { path = "../kernel_process" }
kernel_cpu = { path = "../kernel_cpu" }
num_enum = {version = "0.5", default-features = false}
kernel_printer = { path = "../kernel_printer" }